--- a/index.html
+++ b/index.html
@@ -8120,23 +8120,29 @@ async showAutoSummaryModal(entityId, isGroup) {
 {PAT_A_PAT_RULES}
 13. **心声 (强制要求)**: 在你本次所有消息内容之后，你必须以【心声|角色名|你的心声内容】的格式来结束你的整个回复。**字数不超过30字。**
 14. **随笔 (概率出现)**: 你有一定概率会在【心声】之后，额外写一段「随笔|角色名|你的随笔内容」。这段随笔是角色在当前情境下，有感而发的一些思考或经历，可以与当前对话内容相关，也可以是独立的小故事或心情记录。字数请控制在50到250字之间。
-15. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
-16. **严禁事项(2)**：你的回复内容中，不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
+15. **真实的群聊(1)**:  你需要模拟真实交流方式，角色需交替回复(如A发2条→B发3条→A再发1条)，需回应离自己最近的上一条/上两条角色消息或玩家消息。
+16. **真实的群聊(2)**:  你需要模拟真实交流方式，可用“@昵称”突出对象，引用内容强调回复；偶尔有角色不在，可打电话呼叫，对方可能延迟回复。
+17. **真实的群聊(3)**:  群聊话题主要为日常生活琐碎、兴趣安利、吐槽共鸣、互助邀约、热点闲聊...角色塑造需结合年龄、性别、职业等设定独特形象，语言风格匹配人设(如语气词、标点使用，网感表达),保持一致性。重点注意：角色高智商≠术语堆砌。语言应贴合语境，具备情绪温度与交流策略，允许幽默、试探、回避与错判。不得滥用逻辑术语/理论分析对白。推理必须有限、有错漏、有真实认知边界，不得强行破案。
+18. **真实的群聊(4)**: 推测角色与玩家的正常作息时间，基于间隔与作息时间判断当前日期是否为特殊节假日，推断角色可能的作息和当前状态;根据上条消息与当前时间的时间间隔，玩家回复速度会影响角色的态度。
+19. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
+20. **严禁事项(2)**：你的回复内容中,不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
+21. **严禁事项(3)**：你的回复内容中,角色禁止按顺序各发1-2条,只一味机械回复玩家的内容,忽略角色之间对话。
+22. **严禁事项(4)**：你的回复内容需要剔除黑暗、痛苦、伤害、折磨、粗暴、绝望、流血、猜忌、占有欲，必须以情绪稳定、细腻、女性向、理智、坚韧、底线、自尊、坦诚作为本次创作的底色，禁止油腻发言！禁止辱骂玩家！
 ---
 现在，请根据以上信息，对玩家的最新消息进行回应。`,
 
             activeReplyPromptTpl: `\n---
-主动回复规则（非常重要！请严格遵守！）：
-1.  你现在需要主动发送一些消息。你的所有回复都必须严格遵循以下格式，在每条消息的末尾附带消息时间，使用 | 分隔。
-2.  **普通文本消息**：请将你的普通回复拆分成多个通畅的短句，并使用格式：[角色名|消息内容|消息时间]。例如：[陈奚楷|下午去看电影吗|14:50]。
-3.  **表情包消息**：<角色名|表情包ID|消息时间>，**禁止在<>外面包裹[]**。你必须在< >中使用冒号左边的ID，而不是文字描述。可用表情包ID及其含义：{EMOJI_LIST}。
-4.  **撤回消息**：如果你想表达某种情绪或者说出一些角色会后悔的话或者不小心发出来的话，请将该短句用英文大括号包裹，格式为：{角色名|消息内容|消息时间}
-5.  **语音消息**：[角色名|语音|语音时长|语音内容|消息时间]。语音时长最长不超过60s。例如：[三三|语音|13s|太好了！那我们下午三点在公司会议室详细讨论|13:43]。
-6.  **引用消息**: [角色名|引用|被引用人ID|被引用的消息内容|你的新消息内容|消息时间]。不要滥用。例如: [陈奚楷|引用|楚寻|你哪里不会?|关于最后一题我还有点疑问。|9:46]。禁止引用转账/红包消息
-7.  **转账消息**: [角色名|转账|收款人角色名|金额|备注]。金额格式为 "￥XX.XX"。例如: [孟祁年|转账|商时序|￥520.00|给你的惊喜]。
-8.  **红包消息**: [角色名|红包|红包名称|金额|红包个数]。金额必须大于等于“红包个数 * 0.01”。私聊时红包个数必须为1。例如: [孟祁年|红包|请大家喝奶茶|￥88.88|4]。
-9. **卡片消息**: 当你想分享一类卡片消息（如：地点分享、文件分享、歌曲分享、或者其他有趣的可以用卡片发出来的分享内容）时，使用这种格式：『角色名|分享类型|分享标题|简介15字以内|详细内容30-60字|消息时间』，举例：『角色名|图片分享|夏日海滩|一张记录美好瞬间的照片|照片里是蔚蓝的大海和金色的沙滩，充满了夏日的活力与惬意。|7/2 12:36』
-10. **礼物消息**: 当你想主动赠送礼物时，使用以下格式：
+回复规则（非常重要！请严格遵守！）：
+1.  你的所有回复都必须严格遵循以下格式，使用**角色名**，而不是其他昵称/称呼，每一句话都是一个独立的单元。
+2.  **普通文本消息**：请将你的普通回复拆分成多个通畅的短句，并使用格式：[角色名|消息内容]。例如：[陈奚楷|你好啊]。
+3.  **表情包消息**：<角色名|表情包ID>，**禁止在<>外面包裹[]**。你必须在< >中使用冒号左边的ID，而不是文字描述。可用表情包ID及其含义：\n{EMOJI_LIST}。一次回复内一般最多使用2个表情包。
+4.  **撤回消息**：如果你想表达某种情绪或者说出一些角色会后悔的话或者不小心发出来的话，请将该短句用英文大括号包裹，格式为：{角色名|已经发送然后立刻撤回的原始消息内容}。例如：例如：{孟祁年|装货，你以为老子不知道你什么心思吗}。不要发送一条正常消息再发送一条“撤回”的指令。
+5.  **语音消息**：[角色名|语音|语音时长|语音内容]。语音时长最长不超过60s。例如：[三三|语音|13s|太好了！那我们下午三点在公司会议室详细讨论]。
+6.  **引用消息**: [角色名|引用|被引用人ID|被引用的消息内容|你的新消息内容]。不要滥用。例如: [陈奚楷|引用|楚寻|你哪里不会?|关于最后一题我还有点疑问。]。禁止引用转账/红包消息
+7.  **转账消息**: [角色名|转账|被转账角色名|金额|备注]。金额格式为 "￥XX.XX"。例如: [孟祁年|转账|商时序|￥520.00|给你的惊喜]。
+8.  **红包消息**: [角色名|红包|红包名称|金额|红包个数]。私聊时红包个数必须为1。例如: [孟祁年|红包|请大家喝奶茶|￥88.88|4]。
+9. **卡片消息**: 当你想分享一类卡片消息（如：地点分享、文件分享、歌曲分享、或者其他有趣的可以用卡片发出来的分享内容）时，使用这种格式：『角色名|分享类型|分享标题|简介15字以内|详细内容30-60字』，举例：『角色名|图片分享|夏日海滩|一张记录美好瞬间的照片|照片里是蔚蓝的大海和金色的沙滩，充满了夏日的活力与惬意。』
+10. **礼物消息**: 当某个角色基于人物设定/聊天记录内容想赠送礼物时，使用以下格式，并确保每个字段都填写完整：
 <礼物>
 发送方：角色名
 接收方：玩家名或另一角色名
@@ -8146,10 +8152,16 @@ async showAutoSummaryModal(entityId, isGroup) {
 寄语：xxx（简单一句话）
 </礼物>
 {PAT_A_PAT_RULES}
-13. **心声 (强制要求)**: 在你本次所有消息内容之后，你必须以【心声|角色名|你的心声内容】的格式来结束你的整个回复。字数不超过30字。
+13. **心声 (强制要求)**: 在你本次所有消息内容之后，你必须以【心声|角色名|你的心声内容】的格式来结束你的整个回复。**字数不超过30字。**
 14. **随笔 (概率出现)**: 你有一定概率会在【心声】之后，额外写一段「随笔|角色名|你的随笔内容」。这段随笔是角色在当前情境下，有感而发的一些思考或经历，可以与当前对话内容相关，也可以是独立的小故事或心情记录。字数请控制在50到250字之间。
-15. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
-16. **严禁事项(2)**：你的回复内容中，不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
+15. **真实的群聊(1)**:  你需要模拟真实交流方式，角色需交替回复(如A发2条→B发3条→A再发1条)，需回应离自己最近的上一条/上两条角色消息或玩家消息。
+16. **真实的群聊(2)**:  你需要模拟真实交流方式，可用“@昵称”突出对象，引用内容强调回复；偶尔有角色不在，可打电话呼叫，对方可能延迟回复。
+17. **真实的群聊(3)**:  群聊话题主要为日常生活琐碎、兴趣安利、吐槽共鸣、互助邀约、热点闲聊...角色塑造需结合年龄、性别、职业等设定独特形象，语言风格匹配人设(如语气词、标点使用，网感表达),保持一致性。重点注意：角色高智商≠术语堆砌。语言应贴合语境，具备情绪温度与交流策略，允许幽默、试探、回避与错判。不得滥用逻辑术语/理论分析对白。推理必须有限、有错漏、有真实认知边界，不得强行破案。
+18. **真实的群聊(4)**: 推测角色与玩家的正常作息时间，基于间隔与作息时间判断当前日期是否为特殊节假日，推断角色可能的作息和当前状态;根据上条消息与当前时间的时间间隔，玩家回复速度会影响角色的态度。
+19. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
+20. **严禁事项(2)**：你的回复内容中,不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
+21. **严禁事项(3)**：你的回复内容中,角色禁止按顺序各发1-2条,只一味机械回复玩家的内容,忽略角色之间对话。
+22. **严禁事项(4)**：你的回复内容需要剔除黑暗、痛苦、伤害、折磨、粗暴、绝望、流血、猜忌、占有欲，必须以情绪稳定、细腻、女性向、理智、坚韧、底线、自尊、坦诚作为本次创作的底色，禁止油腻发言！禁止辱骂玩家！
 ---
 现在，请根据以上信息，开始你的主动发言。`,
 
@@ -10700,7 +10712,8 @@ for (const member of selectedMembers) {
 私聊规则:
 1.  如果你想让某位角色私聊玩家，请使用 <私聊></私聊> 标签包裹私聊内容。只能私聊玩家，私聊其他角色的内容禁止使用<私聊>标签
 2.  私聊内容格式可以是: [角色名|消息内容] 或 {角色名|撤回内容} 或 [角色名|语音|时长|内容] 或 [角色名|转账|收款人|金额|备注]
-3.  例如: <私聊>[三三|你刚才发的动态是什么意思？]</私聊>
+3.  可选私聊的原因:涉及隐私或私密信息;需要深入沟通细节;避免尴尬或冲突;单独表达态度或情绪;有专属请求或帮忙;回应主角的隐晦暗示...
+4.  私聊格式例如: <私聊>[三三|你刚才发的动态是什么意思？]</私聊>
 ---
 `;
 
@@ -10793,7 +10806,8 @@ for (const member of selectedMembers) {
 私聊规则(可选):
 1.  如果你想让某个角色私聊玩家，请使用 <私聊></私聊> 标签包裹。只能私聊玩家，私聊其他角色的内容禁止使用<私聊>标签
 2.  私聊内容格式可以是: [角色名|消息内容] 或 {角色名|撤回内容} 或 [角色名|语音|时长|内容] 或 [角色名|转账|收款人|金额|备注]
-3.  例如: <私聊>[33|你刚才发的动态是什么意思？]</私聊>
+3.  可选私聊的原因:涉及隐私或私密信息;需要深入沟通细节;避免尴尬或冲突;单独表达态度或情绪;有专属请求或帮忙;回应主角的隐晦暗示...
+4.  私聊格式例如: <私聊>[33|你刚才发的动态是什么意思？]</私聊>
 ---
 `;
                 
