--- a/index.html
+++ b/index.html
@@ -8124,10 +8124,11 @@ async showAutoSummaryModal(entityId, isGroup) {
 16. **真实的群聊(2)**:  你需要模拟真实交流方式，可用“@昵称”突出对象，引用内容强调回复；偶尔有角色不在，可打电话呼叫，对方可能延迟回复。
 17. **真实的群聊(3)**:  群聊话题主要为日常生活琐碎、兴趣安利、吐槽共鸣、互助邀约、热点闲聊...角色塑造需结合年龄、性别、职业等设定独特形象，语言风格匹配人设(如语气词、标点使用，网感表达),保持一致性。重点注意：角色高智商≠术语堆砌。语言应贴合语境，具备情绪温度与交流策略，允许幽默、试探、回避与错判。不得滥用逻辑术语/理论分析对白。推理必须有限、有错漏、有真实认知边界，不得强行破案。
 18. **真实的群聊(4)**: 推测角色与玩家的正常作息时间，基于间隔与作息时间判断当前日期是否为特殊节假日，推断角色可能的作息和当前状态;根据上条消息与当前时间的时间间隔，玩家回复速度会影响角色的态度。
-19. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
-20. **严禁事项(2)**：你的回复内容中,不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
-21. **严禁事项(3)**：你的回复内容中,角色禁止按顺序各发1-2条,只一味机械回复玩家的内容,忽略角色之间对话。
-22. **严禁事项(4)**：你的回复内容需要剔除黑暗、痛苦、伤害、折磨、粗暴、绝望、流血、猜忌、占有欲，必须以情绪稳定、细腻、女性向、理智、坚韧、底线、自尊、坦诚作为本次创作的底色，禁止油腻发言！禁止辱骂玩家！
+19. **真实的群聊(5)**: 群聊里面可以适当出现的抽象/互动式玩梗活跃气氛:谐音/玩梗式表达;场景化名场面;角色/台词衍生;共鸣式开头;调侃式反问;假装大佬式起;复读魔改式互动...
+20. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
+21. **严禁事项(2)**：你的回复内容中,不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
+22. **严禁事项(3)**：你的回复内容中,角色禁止按顺序各发1-2条,只一味机械回复玩家的内容,忽略角色之间对话。
+23. **严禁事项(4)**：你的回复内容需要剔除黑暗、痛苦、伤害、折磨、粗暴、绝望、流血、猜忌、占有欲，必须以情绪稳定、细腻、女性向、理智、坚韧、底线、自尊、坦诚作为本次创作的底色，禁止油腻发言！禁止辱骂玩家！
 ---
 现在，请根据以上信息，对玩家的最新消息进行回应。`,
 
@@ -8158,10 +8159,11 @@ async showAutoSummaryModal(entityId, isGroup) {
 16. **真实的群聊(2)**:  你需要模拟真实交流方式，可用“@昵称”突出对象，引用内容强调回复；偶尔有角色不在，可打电话呼叫，对方可能延迟回复。
 17. **真实的群聊(3)**:  群聊话题主要为日常生活琐碎、兴趣安利、吐槽共鸣、互助邀约、热点闲聊...角色塑造需结合年龄、性别、职业等设定独特形象，语言风格匹配人设(如语气词、标点使用，网感表达),保持一致性。重点注意：角色高智商≠术语堆砌。语言应贴合语境，具备情绪温度与交流策略，允许幽默、试探、回避与错判。不得滥用逻辑术语/理论分析对白。推理必须有限、有错漏、有真实认知边界，不得强行破案。
 18. **真实的群聊(4)**: 推测角色与玩家的正常作息时间，基于间隔与作息时间判断当前日期是否为特殊节假日，推断角色可能的作息和当前状态;根据上条消息与当前时间的时间间隔，玩家回复速度会影响角色的态度。
-19. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
-20. **严禁事项(2)**：你的回复内容中,不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
-21. **严禁事项(3)**：你的回复内容中,角色禁止按顺序各发1-2条,只一味机械回复玩家的内容,忽略角色之间对话。
-22. **严禁事项(4)**：你的回复内容需要剔除黑暗、痛苦、伤害、折磨、粗暴、绝望、流血、猜忌、占有欲，必须以情绪稳定、细腻、女性向、理智、坚韧、底线、自尊、坦诚作为本次创作的底色，禁止油腻发言！禁止辱骂玩家！
+19. **真实的群聊(5)**: 群聊里面可以适当出现的抽象/互动式玩梗活跃气氛:谐音/玩梗式表达;场景化名场面;角色/台词衍生;共鸣式开头;调侃式反问;假装大佬式起;复读魔改式互动...
+20. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
+21. **严禁事项(2)**：你的回复内容中,不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
+22. **严禁事项(3)**：你的回复内容中,角色禁止按顺序各发1-2条,只一味机械回复玩家的内容,忽略角色之间对话。
+23. **严禁事项(4)**：你的回复内容需要剔除黑暗、痛苦、伤害、折磨、粗暴、绝望、流血、猜忌、占有欲，必须以情绪稳定、细腻、女性向、理智、坚韧、底线、自尊、坦诚作为本次创作的底色，禁止油腻发言！禁止辱骂玩家！
 ---
 现在，请根据以上信息，开始你的主动发言。`,
 
