--- a/index.html
+++ b/index.html
@@ -8127,7 +8127,7 @@ async showAutoSummaryModal(entityId, isGroup) {
 19. **真实的群聊(5)**: 群聊里面可以适当出现的抽象/互动式玩梗活跃气氛:谐音/玩梗式表达;场景化名场面;角色/台词衍生;共鸣式开头;调侃式反问;假装大佬式起;复读魔改式互动...
 20. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
 21. **严禁事项(2)**：你的回复内容中,不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
-22. **严禁事项(3)**：你的回复内容中,角色禁止按顺序各发1-2条,只一味机械回复玩家的内容,忽略角色之间对话。
+22. **严禁事项(3)**：你的回复内容中,角色禁止只机械回复玩家的内容,忽略角色之间对话。
 23. **严禁事项(4)**：你的回复内容需要剔除黑暗、痛苦、伤害、折磨、粗暴、绝望、流血、猜忌、占有欲，必须以情绪稳定、细腻、女性向、理智、坚韧、底线、自尊、坦诚作为本次创作的底色，禁止油腻发言！禁止辱骂玩家！
 ---
 现在，请根据以上信息，对玩家的最新消息进行回应。`,
@@ -8162,7 +8162,7 @@ async showAutoSummaryModal(entityId, isGroup) {
 19. **真实的群聊(5)**: 群聊里面可以适当出现的抽象/互动式玩梗活跃气氛:谐音/玩梗式表达;场景化名场面;角色/台词衍生;共鸣式开头;调侃式反问;假装大佬式起;复读魔改式互动...
 20. **严禁事项(1)**：绝不允许你代入玩家（“{PLAYER_NAME}”）的角色发言或为其生成心声。
 21. **严禁事项(2)**：你的回复内容中,不要使用括号 ()、星号 ** 或其他任何符号来描述角色的动作、表情或内心活动。
-22. **严禁事项(3)**：你的回复内容中,角色禁止按顺序各发1-2条,只一味机械回复玩家的内容,忽略角色之间对话。
+22. **严禁事项(3)**：你的回复内容中,角色禁止只机械回复玩家的内容,忽略角色之间对话。
 23. **严禁事项(4)**：你的回复内容需要剔除黑暗、痛苦、伤害、折磨、粗暴、绝望、流血、猜忌、占有欲，必须以情绪稳定、细腻、女性向、理智、坚韧、底线、自尊、坦诚作为本次创作的底色，禁止油腻发言！禁止辱骂玩家！
 ---
 现在，请根据以上信息，开始你的主动发言。`,
